--- a/project.config.json
+++ b/project.config.json
@@ -7,6 +7,6 @@
 		"newFeature": true
 	},
 	"appid": "wxea4554d4a57f392a",
-	"projectname": "bitantifake",
+	"projectname": "%E5%B8%81%E9%98%B2%E4%BC%AA",
 	"condition": {}
 }
