--- a/client/app.json
+++ b/client/app.json
@@ -1,13 +1,16 @@
 {
-  "pages":[
+  "pages": [
+    "pages/Scan/Scan",
+    "pages/ShowProduct/ShowProduct",
+    "pages/Activate/Activate",
     "pages/index/index",
     "pages/addCgi/addCgi"
   ],
-  "window":{
-    "backgroundColor":"#F6F6F6",
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundColor": "#F6F6F6",
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "Wafer Quick Start",
-    "navigationBarTextStyle":"black"
+    "navigationBarTitleText": "币防伪",
+    "navigationBarTextStyle": "black"
   }
 }
